--- a/MultTenantTemplate.WebApi/MultTenantTemplate.WebApi.csproj
+++ b/MultTenantTemplate.WebApi/MultTenantTemplate.WebApi.csproj
@@ -6,7 +6,20 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>97b28bed-2e4f-447d-820e-48a6c1a82961</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;1591</NoWarn>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="appSettings.Production.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
@@ -31,6 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MultiTenant.Infra.CrossCutting.Auth\MultiTenant.Infra.CrossCutting.Auth.csproj" />
     <ProjectReference Include="..\MultiTenantTemplate.Infra.CrossCutting.IoC\MultiTenantTemplate.Infra.CrossCutting.IoC.csproj" />
     <ProjectReference Include="..\MultiTenantTemplate.Infra.Data\MultiTenantTemplate.Infra.Data.csproj" />
   </ItemGroup>
