--- a/MultTenantTemplate.WebApi/Properties/launchSettings.json
+++ b/MultTenantTemplate.WebApi/Properties/launchSettings.json
@@ -1,16 +1,16 @@
 {
   "profiles": {
-    "http": {
+    "Production": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Production"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5210"
+      "applicationUrl": "https://localhost:7051;http://localhost:5210"
     },
-    "https": {
+    "Development": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -20,13 +20,15 @@
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7051;http://localhost:5210"
     },
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "Testing": {
+      "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Testing"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7051;http://localhost:5210"
     },
     "Docker": {
       "commandName": "Docker",
