--- a/MultiTenantTemplate.Infra.Data/MultiTenantTemplate.Infra.Data.csproj
+++ b/MultiTenantTemplate.Infra.Data/MultiTenantTemplate.Infra.Data.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.OData" Version="5.7.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
@@ -25,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MultiTenant.Infra.CrossCutting.Auth\MultiTenant.Infra.CrossCutting.Auth.csproj" />
     <ProjectReference Include="..\MultiTenantTemplate.Domain\MultiTenantTemplate.Domain.csproj" />
   </ItemGroup>
 
